# gmail_auto

./: .gitignore  README.md  email_ai_model.pkl  main.py  pyproject.toml
src/: config.py  drive_uploader.py  email_client.py  email_model.py  google_process.py  matcher.py  models.py  pdf_parser.py  reconciler.py
statements/: Amex_Credit_Card_Statement.xlsx  Chase_Credit_Card_Statement.xlsx
